Added camera function. Does not work on Nexus phones because of runtime permissions. Calls the camera application and then displays a thumbnail. Later iterations should resolve permissions error and make it possible to retake the photo.

--- a/FishTagsApp/app/src/main/AndroidManifest.xml
+++ b/FishTagsApp/app/src/main/AndroidManifest.xml
@@ -1,7 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="bft.fishtagsapp">
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+
+    <!-- TODO: camera unrequired, disable camera features if no camera on device.
+        Currently, camera required on device to download app.
+    -->
+    <uses-feature android:name="android.hardware.camera" android:required="true"/>
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,7 +28,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ParseFile.ParseFileActivity"
             android:label="@string/title_activity_parse_file"
@@ -28,6 +37,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="bft.fishtagsapp.MainActivity" />
         </activity>
+        <activity
+            android:name=".Camera"
+            android:label="@string/title_activity_camera"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
