--- a/FishTagsApp/app/src/main/AndroidManifest.xml
+++ b/FishTagsApp/app/src/main/AndroidManifest.xml
@@ -2,13 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="bft.fishtagsapp">
 
-
-    <!-- TODO: camera unrequired, disable camera features if no camera on device.
+    <!--
+         TODO: camera unrequired, disable camera features if no camera on device.
         Currently, camera required on device to download app.
     -->
-	<!-- Camera -->
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-feature android:name="android.hardware.camera" android:required="true"/>
+    <!-- Camera -->
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
     <!-- ACCESSING STORAGE -->
@@ -44,7 +47,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ParseFile.ParseFileActivity"
+            android:name=".ParseFile.ParseFile"
             android:label="@string/title_activity_parse_file"
             android:parentActivityName=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -55,7 +58,7 @@
         <activity
             android:name=".Camera.Camera"
             android:label="@string/title_activity_camera"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
 
         <receiver
             android:name=".Wifi.WifiDetector"
@@ -69,8 +72,16 @@
         <activity
             android:name=".Linkage.LinkageActivity"
             android:label="LinkageActivity"
-            android:parentActivityName=".MainActivity"></activity>
-        <activity android:name=".Storage.StorageActivty"></activity>
+            android:parentActivityName=".MainActivity" />
+        <activity android:name=".Storage.StorageActivty" />
+        <activity
+            android:name=".FormActivity"
+            android:label="@string/title_activity_form"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".TestingActivity"
+            android:label="@string/title_activity_testing"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
