--- a/FishTagsApp/app/src/main/AndroidManifest.xml
+++ b/FishTagsApp/app/src/main/AndroidManifest.xml
@@ -69,7 +69,10 @@
             android:name=".TestingActivity"
             android:label="@string/title_activity_testing"
             android:theme="@style/AppTheme.NoActionBar"></activity>
-
+        <service
+            android:name=".Client.Uploader"
+            >
+            </service>
     </application>
 
 </manifest>
