Tried making a TagUploader IntentService, not actually completed. Fiddled around with UI, not completed either. Shouldn't of changed anyn of the implementation, so still should work...

--- a/FishTagsApp/app/src/main/AndroidManifest.xml
+++ b/FishTagsApp/app/src/main/AndroidManifest.xml
@@ -60,19 +60,21 @@
             android:name=".Linkage.LinkageActivity"
             android:label="LinkageActivity"
             android:parentActivityName=".MainActivity" />
+
         <activity android:name=".Storage.StorageActivty" />
+
         <activity
             android:name=".FormActivity"
-            android:label="@string/title_activity_form"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="Tag Submission Form"/>
+
         <activity
             android:name=".TestingActivity"
             android:label="@string/title_activity_testing"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+
         <service
-            android:name=".Client.Uploader"
-            >
-            </service>
+            android:name=".Client.TagUploader"
+            android:exported="false"></service>
     </application>
 
 </manifest>
