Worked on the UI, added in a toolbar and a logo, a color scheme, all of which could be, and need to be changed. Also needs to integrate Jamie's code with other fields from login and stuff like that. TODO: inlude help and settings in toolbar overflow, design a logo, keep improving the UI. Tested once on Samsung, needs to be tested much more thoroughly, and compatibility on nexus and other phones needs to be figured out

--- a/FishTagsApp/app/src/main/AndroidManifest.xml
+++ b/FishTagsApp/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="bft.fishtagsapp">
 
-
     <!--
          TODO: camera unrequired, disable camera features if no camera on device.
         Currently, camera required on device to download app.
@@ -34,12 +33,11 @@
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:supportsRtl="true">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/MyFishTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -60,12 +58,12 @@
             android:name=".Linkage.LinkageActivity"
             android:label="LinkageActivity"
             android:parentActivityName=".MainActivity" />
-
         <activity android:name=".Storage.StorageActivty" />
 
         <activity
             android:name=".FormActivity"
-            android:label="Tag Submission Form"/>
+            android:icon="@drawable/whale"
+            android:theme="@style/MyFishTheme"/>
 
         <activity
             android:name=".TestingActivity"
@@ -74,7 +72,8 @@
 
         <service
             android:name=".Client.TagUploader"
-            android:exported="false"></service>
+            android:exported="false" />
+
     </application>
 
 </manifest>
