Revert "Merged ui branch into combine. Still some conflicts to fix because the layout completely changed"
This reverts commit 4d07de993eece9c3bc4f89c89464b9c3ac432b76, reversing
changes made to 36c39f0176bc9ab4053c2b1dd71043cb7f1e5c98.

Reverting the merge because loads of problems have been caused that should not have come from the layouts and uis being updated. It was in Launcher Activity and Storage, errors that were not thrown before.

--- a/FishTagsApp/app/src/main/AndroidManifest.xml
+++ b/FishTagsApp/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="bft.fishtagsapp">
 
+
     <!--
          TODO: camera unrequired, disable camera features if no camera on device.
         Currently, camera required on device to download app.
@@ -38,7 +39,7 @@
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
-        /*android:supportsRtl="true"
+        android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:name=".FishTagsApplication">
 
@@ -46,13 +47,6 @@
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
-        */
-	android:supportsRtl="true">
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/MyFishTheme">
-            <intent-filter>
 
         </activity>
 
@@ -69,12 +63,12 @@
             android:name=".Linkage.LinkageActivity"
             android:label="LinkageActivity"
             android:parentActivityName=".MainActivity" />
+
         <activity android:name=".Storage.StorageActivty" />
 
         <activity
             android:name=".FormActivity"
-            android:icon="@drawable/whale"
-            android:theme="@style/MyFishTheme"/>
+            android:label="Tag Submission Form"/>
 
         <activity
             android:name=".TestingActivity"
