--- a/FishTagsApp/app/src/main/AndroidManifest.xml
+++ b/FishTagsApp/app/src/main/AndroidManifest.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="bft.fishtagsapp">
-
-
     <!--
          TODO: camera unrequired, disable camera features if no camera on device.
         Currently, camera required on device to download app.
     -->
+
     <!-- Camera -->
     <uses-permission android:name="android.permission.CAMERA" />
 
@@ -83,6 +82,7 @@
             android:name=".Signup.SignupActivity"
             android:label="@string/title_activity_signup" />
 
+        <!--Set the Launcher activity to be the start-up activity-->
         <activity android:name=".LauncherActivity"
             android:label="@string/app_name">
             <intent-filter>
