--- a/FishTagsApp/app/src/main/AndroidManifest.xml
+++ b/FishTagsApp/app/src/main/AndroidManifest.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="bft.fishtagsapp">
+
     <!--
          TODO: camera unrequired, disable camera features if no camera on device.
         Currently, camera required on device to download app.
     -->
+
 
     <!-- Camera -->
     <uses-permission android:name="android.permission.CAMERA" />
@@ -36,18 +38,15 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
+        android:name=".FishTagsApplication"
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name=".FishTagsApplication">
-
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
 
         <receiver
             android:name=".Wifi.WifiDetector"
@@ -62,35 +61,38 @@
             android:name=".Linkage.LinkageActivity"
             android:label="LinkageActivity"
             android:parentActivityName=".MainActivity" />
-
         <activity android:name=".Storage.StorageActivty" />
-
         <activity
             android:name=".FormActivity"
-            android:label="Tag Submission Form"/>
-
+            android:label="Tag Submission Form" />
         <activity
             android:name=".TestingActivity"
             android:label="@string/title_activity_testing"
             android:theme="@style/AppTheme.NoActionBar" />
 
         <service android:name=".Client.UploadService" />
-
         <service android:name=".Client.TagUploader" />
 
         <activity
             android:name=".Signup.SignupActivity"
             android:label="@string/title_activity_signup" />
 
-        <!--Set the Launcher activity to be the start-up activity-->
-        <activity android:name=".LauncherActivity"
+        <!-- Set the Launcher activity to be the start-up activity -->
+        <activity
+            android:name=".LauncherActivity"
             android:label="@string/app_name">
+
+        </activity>
+        <activity
+            android:name=".Splash"
+            android:label="@string/title_activity_splash"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
