--- a/FishTagsApp/app/build.gradle
+++ b/FishTagsApp/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.github.kaknazaveshtakipishi:PermissionEverywhere:alpha'
+    compile 'junit:junit:4.12'
 }
