--- a/FishTagsApp/app/src/main/AndroidManifest.xml
+++ b/FishTagsApp/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         Currently, camera required on device to download app.
     -->
 
+
     <!-- Camera -->
     <uses-permission android:name="android.permission.CAMERA" />
 
@@ -35,8 +36,10 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
-    <!-- DETECT BLUETOOTH TRANSFER -->
-    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <!-- TEST BLUETOOTH RECV -->
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_PRIVILEGED"/>
 
     <application
         android:name=".FishTagsApplication"
@@ -71,20 +74,22 @@
         <!-- Set the Launcher activity to be the start-up activity -->
         <activity
             android:name=".LauncherActivity"
-            android:label="Launcher"></activity>
+            android:label="Launcher" />
+
         <activity
             android:name=".Splash"
             android:label="@string/app_name"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+                "
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".camera.CameraActivity"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
+        <activity
+            android:name=".camera.CameraActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
 
     </application>
 
