--- a/FishTagsApp/app/src/main/AndroidManifest.xml
+++ b/FishTagsApp/app/src/main/AndroidManifest.xml
@@ -34,6 +34,10 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.BLUETOOTH_PRIVILEGED" />
 
+    <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyDZzqShpXm9Bc4UrfgF_O-kZDqwm0ljKJE"/>
+
     <application
         android:name=".FishTagsApplication"
         android:allowBackup="true"
