--- a/FishTagsApp/app/src/main/AndroidManifest.xml
+++ b/FishTagsApp/app/src/main/AndroidManifest.xml
@@ -34,17 +34,20 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.BLUETOOTH_PRIVILEGED" />
 
-    <meta-data
-        android:name="com.google.android.geo.API_KEY"
-        android:value="AIzaSyDZzqShpXm9Bc4UrfgF_O-kZDqwm0ljKJE"/>
-
     <application
         android:name=".FishTagsApplication"
         android:allowBackup="true"
         android:label="@string/app_name"
-        android:logo="@mipmap/ic_fish"
+        android:icon="@mipmap/ic_fish"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDZzqShpXm9Bc4UrfgF_O-kZDqwm0ljKJE"/>
+        <uses-library android:name="com.google.android.maps" />
+
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
