Fixed bug with wrong ID being displayed. Will need to redo the auto-fill in capability because time and location are done behind the scenes. Currently using fragments to create a step by step form with one thing per page. Have not gotten buttons switching between the tabs working yet. Would also want to put some pictures like how to measure fork length in the tabs

--- a/FishTagsApp/app/src/main/AndroidManifest.xml
+++ b/FishTagsApp/app/src/main/AndroidManifest.xml
@@ -63,7 +63,7 @@
         </receiver>
 
         <activity
-            android:name=".FormActivity"
+            android:name=".form.FormActivity"
             android:label="Tag Submission Form" />
 
         <service android:name=".client.UploadService" />
