--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 
-
-# Created by https://www.gitignore.io/api/vim,linux,android,java,webstorm
+# Created by https://www.gitignore.io/api/vim,linux,android,java,webstorm,git,jekyll
 
 ### Vim ###
 # swap
@@ -33,7 +32,7 @@ tags
 *.apk
 *.ap_
 
-# Files for the Dalvik VM
+# Files for the ART/Dalvik VM
 *.dex
 
 # Java class files
@@ -65,27 +64,14 @@ captures/
 
 # Intellij
 *.iml
+.idea/workspace.xml
+.idea/libraries
 
 # Keystore files
 *.jks
 
 ### Android Patch ###
 gen-external-apklibs
-
-
-### Java ###
-*.class
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
 
 
 ### WebStorm ###
@@ -134,11 +120,35 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 
-*.iml
-.gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
-.DS_Store
-/build
-/captures
+### WebStorm Patch ###
+# Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
+
+# *.iml
+# modules.xml
+# .idea/misc.xml 
+# *.ipr
+
+
+### Git ###
+*.orig
+
+
+### Jekyll ###
+_site/
+.sass-cache/
+.jekyll-metadata
+
+
+### Java ###
+*.class
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
