Restricted screen orientation to only portrait for the FormActivity. Moved file parsing, aka auto-fill in of the tag id to the TagIDFragment because fragments have separate content layouts which are extremely tedious to access from the parent activity because the onCreateView function in the fragment may not finish inflating everything before the call to the View it is inflating is made from the activity, making the view null.

--- a/FishTagsApp/app/src/main/AndroidManifest.xml
+++ b/FishTagsApp/app/src/main/AndroidManifest.xml
@@ -64,7 +64,8 @@
 
         <activity
             android:name=".form.FormActivity"
-            android:label="Tag Submission Form" />
+            android:label="Tag Submission Form"
+            android:screenOrientation="portrait"/>
 
         <service android:name=".client.UploadService" />
 
